--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -14,28 +14,25 @@
     <div class="home-menu pure-menu pure-menu-horizontal">
         <a class="pure-menu-heading" href="#/">Wemebox</a>
 	<div id="state-menu">
-          <ul class="pure-menu-list">
-          <li class="pure-menu-item"><a href="#/login" class="pure-menu-link">Log in</a></li>
-	  <li class="pure-menu-item"><a href="#/signup" class="pure-menu-link">Signup</a></li>
-           
-           
-          </ul>
+          <!--<ul class="pure-menu-list">
+            <li class="pure-menu-item"><a href="#/login" class="pure-menu-link">Log in</a></li>
+	    <li class="pure-menu-item"><a href="#/signup" class="pure-menu-link">Signup</a></li>  
+          </ul>-->
 	</div>
     </div>
     
     <div id="main" class="layout">
      
       <div class="pure-menu pure-menu-horizontal pure-menu-scrollable" id="app-menu">
-	<ul class="pure-menu-list">
+	<!--<ul class="pure-menu-list">
           <li class="pure-menu-item"><a href="#/" class="pure-menu-link">Home</a></li>
           <li class="pure-menu-item"><a href="#/boxes" class="pure-menu-link">Boxes</a></li>
           <li class="pure-menu-item"><a href="#/settings" class="pure-menu-link">Settings</a></li>
 	  
-	</ul>
+	</ul>-->
       </div>
-      <div id="content" class="content"> <!--content-->
-      
-      </div><!--content ends-->
+      {% block content %}
+      {% endblock %}
     </div>
     <script type="text/javascript">
       var context = "{{servlet-context}}";
